k8s/realtime-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realtime-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realtime-service
  template:
    metadata:
      labels:
        app: realtime-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
    spec:
      containers:
      - name: realtime-service
        image: realtime-service:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
