k8s/realtime-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realtime-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realtime-service
  template:
    metadata:
      labels:
        app: realtime-service
    spec:
      containers:
      - name: realtime-service
        image: realtime-service:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: realtime-service
spec:
  selector:
    app: realtime-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
